feat(cli): --cluster override on 15 cluster subcommands via shared ClusterTargetMixin